kubernetes/workloads/watchyourlan/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchyourlan
  namespace: watchyourlan
  labels:
    app.kubernetes.io/name: watchyourlan
    app.kubernetes.io/instance: watchyourlan
    app.kubernetes.io/part-of: watchyourlan
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: watchyourlan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: watchyourlan
        app.kubernetes.io/instance: watchyourlan
        app.kubernetes.io/part-of: watchyourlan
        app.kubernetes.io/managed-by: argocd
    spec:
      priorityClassName: homelab-low
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: watchyourlan
          image: ghcr.io/aceberg/watchyourlan:2.1.4
          securityContext:
            capabilities:
              add:
                - NET_RAW
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 8840
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 15
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 36
          volumeMounts:
            - name: data
              mountPath: /data/WatchYourLAN
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: watchyourlan-data
---
apiVersion: v1
kind: Service
metadata:
  name: watchyourlan
  namespace: watchyourlan
  labels:
    app.kubernetes.io/name: watchyourlan
    app.kubernetes.io/instance: watchyourlan
    app.kubernetes.io/part-of: watchyourlan
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: watchyourlan
  ports:
    - name: http
      port: 8840
      targetPort: http
