kubernetes/workloads/watchyourlan/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: watchyourlan
  namespace: watchyourlan
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lan.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: watchyourlan
          port: 8840
  tls: {}
